[project]
name = "HubBaseUtility"
version = "0.0.0.0.1.1"
authors = [
    { name = "Voice659", email = "E.R.Fahretdinov@yandex.ru" },
]
description = "HubBaseUtility – Utility programms!!"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/HubBase-Authority/HubBasePE"
Issues = "https://github.com/HubBase-Authority/HubBasePE/issues"
Documentation = "https://github.com/HubBase-Authority/HubBasePE/wiki/Releases"
Webpage = "https://voice659.github.io/index-pr-hbpe.html"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"